<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"

    android:id="@+id/setting_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/classic_white"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/view_prev_matches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_matches"
            android:layout_alignParentStart="true" />

        <Spinner
            android:id="@+id/period_dropdown"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_toStartOf="@id/view_game_stats"
            android:layout_toEndOf="@id/view_prev_matches"
            android:spinnerMode="dropdown" />

        <Button
            android:id="@+id/view_game_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_game_stats"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <TableRow
        android:id="@+id/teams"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_bar"
        android:weightSum="2"

        android:layout_marginHorizontal="16dp">

        <!--<Spinner-->
            <!--android:id="@+id/my_team"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:gravity="center"-->
            <!--android:spinnerMode="dropdown"-->
            <!--android:textAlignment="center"-->
            <!--android:textStyle="bold" />-->

        <TextView
            android:id="@+id/my_team"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/my_team"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="center"/>

        <TableRow
            android:id="@+id/score"
            android:layout_width="64dp"
            android:layout_height="wrap_content"

            android:weightSum="5">

            <TextView
                android:id="@+id/my_team_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_team_score"

                android:textAlignment="center"
                android:textSize="24sp"
                android:gravity="center"
                android:layout_weight="2"/>

            <TextView
                android:id="@+id/separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:text="@string/separator"
                android:textSize="24sp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/opp_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opponent_score"
                android:textAlignment="center"
                android:textSize="24sp"

                android:layout_weight="2"/>
        </TableRow>

        <TextView
            android:id="@+id/opp_team"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/opp_team"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="center"/>
    </TableRow>

    <TableRow
        android:id="@+id/miss_made"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/teams"
        android:weightSum="12"

        android:layout_marginHorizontal="16dp">

        <TextView
            android:id="@+id/miss_my_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/miss"
            android:textAlignment="center"

            android:layout_weight="3"/>

        <TextView
            android:id="@+id/made_my_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/made"
            android:textAlignment="center"

            android:layout_weight="3"/>

        <View
            android:id="@+id/score_space"
            android:layout_width="64dp"
            android:layout_height="10dp"/>

        <TextView
            android:id="@+id/made_opp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/made"
            android:textAlignment="center"

            android:layout_weight="3"/>

        <TextView
            android:id="@+id/miss_opp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/miss"
            android:textAlignment="center"

            android:layout_weight="3"/>
    </TableRow>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/miss_made">

        <TextView
            android:id="@+id/free_throw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/free_throw"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"

            android:textSize="18sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/two_ptr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_ptr"
            android:textAlignment="center"
            android:layout_below="@id/free_throw"
            android:layout_centerHorizontal="true"

            android:textSize="18sp"
            android:layout_marginTop="34dp"/>

        <TextView
            android:id="@+id/three_ptr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three_ptr"
            android:textAlignment="center"
            android:layout_below="@id/two_ptr"
            android:layout_centerHorizontal="true"

            android:textSize="18sp"
            android:layout_marginTop="35dp"/>

    </RelativeLayout>

    <TableRow
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/miss_made"
        android:weightSum="4"

        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp">

        <View
            android:layout_width="32dp"
            android:layout_height="50dp"/>

        <Button
            android:id="@+id/my_miss_one_ptr"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/design_default_color_primary"
            android:drawableTop="@android:drawable/ic_input_add"
            android:drawableTint="@color/classic_white"
            android:gravity="center"
            android:layout_weight="1"/>

        <View
            android:layout_width="64dp"
            android:layout_height="50dp"/>

        <Button
            android:id="@+id/my_made_one_ptr"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:backgroundTint="@color/design_default_color_primary"
            android:drawableTop="@android:drawable/ic_input_add"
            android:drawableTint="@color/classic_white"
            android:gravity="center"
            android:layout_weight="1"/>

        <View
            android:layout_width="32dp"
            android:layout_height="50dp"/>

        <View
            android:layout_width="64dp"
            android:layout_height="50dp"/>

        <View
            android:layout_width="32dp"
            android:layout_height="50dp"/>

        <Button
            android:id="@+id/opp_made_one_ptr"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:backgroundTint="@color/design_default_color_primary"
            android:drawableTop="@android:drawable/ic_input_add"
            android:drawableTint="@color/classic_white"
            android:gravity="center"
            android:layout_weight="1"/>

        <View
            android:layout_width="64dp"
            android:layout_height="50dp"/>

        <Button
            android:id="@+id/opp_miss_one_ptr"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:backgroundTint="@color/design_default_color_primary"
            android:drawableTop="@android:drawable/ic_input_add"
            android:drawableTint="@color/classic_white"
            android:gravity="center"
            android:layout_weight="1"/>
        <View
            android:layout_width="32dp"
            android:layout_height="50dp"/>
    </TableRow>

    <TableRow
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row1"
        android:weightSum="4"

        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp">

        <View
            android:layout_width="32dp"
            android:layout_height="50dp"/>

        <Button
            android:id="@+id/my_miss_two_ptr"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/design_default_color_primary"
            android:drawableTop="@android:drawable/ic_input_add"
            android:drawableTint="@color/classic_white"
            android:gravity="center"
            android:layout_weight="1"/>

        <View
            android:layout_width="64dp"
            android:layout_height="50dp"/>

        <Button
            android:id="@+id/my_made_two_ptr"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:backgroundTint="@color/design_default_color_primary"
            android:drawableTop="@android:drawable/ic_input_add"
            android:drawableTint="@color/classic_white"
            android:gravity="center"
            android:layout_weight="1"/>

        <View
            android:layout_width="32dp"
            android:layout_height="50dp"/>

        <View
            android:layout_width="64dp"
            android:layout_height="50dp"/>

        <View
            android:layout_width="32dp"
            android:layout_height="50dp"/>

        <Button
            android:id="@+id/opp_made_two_ptr"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:backgroundTint="@color/design_default_color_primary"
            android:drawableTop="@android:drawable/ic_input_add"
            android:drawableTint="@color/classic_white"
            android:gravity="center"
            android:layout_weight="1"/>

        <View
            android:layout_width="64dp"
            android:layout_height="50dp"/>

        <Button
            android:id="@+id/opp_miss_two_ptr"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:backgroundTint="@color/design_default_color_primary"
            android:drawableTop="@android:drawable/ic_input_add"
            android:drawableTint="@color/classic_white"
            android:gravity="center"
            android:layout_weight="1"/>
        <View
            android:layout_width="32dp"
            android:layout_height="50dp"/>

    </TableRow>

    <TableRow
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row2"
        android:weightSum="4"

        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp">

        <View
            android:layout_width="32dp"
            android:layout_height="50dp"/>

        <Button
            android:id="@+id/my_miss_three_ptr"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/design_default_color_primary"
            android:drawableTop="@android:drawable/ic_input_add"
            android:drawableTint="@color/classic_white"
            android:gravity="center"
            android:layout_weight="1"/>

        <View
            android:layout_width="64dp"
            android:layout_height="50dp"/>

        <Button
            android:id="@+id/my_made_three_ptr"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:backgroundTint="@color/design_default_color_primary"
            android:drawableTop="@android:drawable/ic_input_add"
            android:drawableTint="@color/classic_white"
            android:gravity="center"
            android:layout_weight="1"/>

        <View
            android:layout_width="32dp"
            android:layout_height="50dp"/>

        <View
            android:layout_width="64dp"
            android:layout_height="50dp"/>

        <View
            android:layout_width="32dp"
            android:layout_height="50dp"/>

        <Button
            android:id="@+id/opp_made_three_ptr"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:backgroundTint="@color/design_default_color_primary"
            android:drawableTop="@android:drawable/ic_input_add"
            android:drawableTint="@color/classic_white"
            android:gravity="center"
            android:layout_weight="1"/>

        <View
            android:layout_width="64dp"
            android:layout_height="50dp"/>

        <Button
            android:id="@+id/opp_miss_three_ptr"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:backgroundTint="@color/design_default_color_primary"
            android:drawableTop="@android:drawable/ic_input_add"
            android:drawableTint="@color/classic_white"
            android:gravity="center"
            android:layout_weight="1"/>
        <View
            android:layout_width="32dp"
            android:layout_height="50dp"/>

    </TableRow>

    <Button
        android:id="@+id/end_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="End Game"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/last_action"
        android:layout_width="wrap_content"
        android:layout_height="40dp"

        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/end_game"
        android:layout_toStartOf="@id/undo"

        android:layout_weight="1"

        android:background="@color/classic_white"
        android:backgroundTint="@color/table_color"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="Last Activity"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/undo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Undo"

        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>